# engineers

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: google-cloudrun-docker.yml
locales/: en.ftl  sk.ftl
src/: i18n.rs  main.rs  views.rs
static/: styles.css
static/en/: index.html
static/sk/: index.html
templates/: index.html.tera
